# services

./: .env.sample  .gitattributes  .gitignore  README.md  TODO.md  docker-compose.yaml  ml.md  readme.md
.github/workflows/: news_service_api.yml  news_service_api_push.yml  news_service_api_tag.yml  news_service_cron.yml  news_service_cron_push.yml  news_service_cron_tag.yml  news_service_rust.yml  news_service_web.yml  news_service_web_push.yml  news_service_web_tag.yml
deploy/: README.md  aws.tf  main.tf
devops/: README.md  TODO.md
devops/ansible/: ansible.cfg  production.yml
devops/ansible/playbooks/: docker.yml  docker_setup.yml  main.yml
devops/cron/: README.md  postgres-backup.sh  postgres-restore-backup.sh
devops/terraform/: aws.tf  ec2.tf  route53.tf  s3.tf  s3_db_backup.tf  terraform.tf  variables.tf
news_service/: Cargo.toml  Dockerfile  README.md  TODO.md  schema.graphql  sqlx-data.json
news_service/.github/workflows/: ci.yml
news_service/components/api/: Cargo.toml  README.md  sqlx-data.json
news_service/components/api/src/: main.rs
news_service/components/api/src/graphql/: errors.rs  mod.rs  query.rs
news_service/components/api/src/graphql/queries/: mod.rs  news_feed_status.rs  news_feed_url.rs  news_feed_url_direct_references.rs  news_feed_url_indirect_references.rs  news_feed_url_references.rs  news_feed_urls.rs  sitemap_news_feed_url_slugs.rs
news_service/components/cron/: Cargo.toml
news_service/components/cron/src/: main.rs
news_service/components/cron/src/language/: english_language_detector.rs  mod.rs
news_service/components/cron/src/news_feed/: constants.rs  cron_job.rs  hourly_cron_job.rs  mod.rs  news_feed.rs  referenced_twitter_users.rs  user_score.rs  user_tweets.rs
news_service/components/cron/src/news_feed/algorithm/: helper.rs  mod.rs  news_feed_v1.rs  news_feed_v2.rs  time_decay.rs
news_service/components/cron/src/news_feed/models/: mod.rs  tweet_info.rs
news_service/components/cron/src/openai/: api.rs  models.rs
news_service/components/cron/src/scheduler/: main_scheduler.rs  mod.rs  tweet_scheduler.rs
news_service/components/cron/src/slack/: mod.rs
news_service/components/cron/src/twitter/: api.rs  db.rs  mod.rs  oauth.rs
news_service/components/cron/src/util/: convert.rs  helpers.rs  mod.rs
news_service/components/db/: .env  Cargo.toml
news_service/components/db/migrations/: 10_news_feed_url_add_url_slug.down.sql  10_news_feed_url_add_url_slug.up.sql  10_news_feed_url_indexes.up.sql  10_news_tweet_index.down.sql  10_news_tweet_index.up.sql  11_news_feed_url_add_tweeted_at.down.sql  11_news_feed_url_add_tweeted_at.up.sql  11_news_feed_url_indexes_revert.up.sql  12_news_cron_job_add_cron_type.down.sql  12_news_cron_job_add_cron_type.up.sql  1_news_twitter_user.down.sql  1_news_twitter_user.up.sql  2_news_tweet.down.sql  2_news_tweet.up.sql  3_news_referenced_tweet.down.sql  3_news_referenced_tweet.up.sql  4_news_tweet_url.down.sql  4_news_tweet_url.up.sql  5_news_referenced_tweet_url.down.sql  5_news_referenced_tweet_url.up.sql  6_news_feed_url.down.sql  6_news_feed_url.up.sql  6_news_twitter_list.down.sql  7_news_twitter_list.up.sql  8_news_twitter_referenced_user.down.sql  8_news_twitter_referenced_user.up.sql  9_news_cron_job.down.sql  9_news_cron_job.up.sql
news_service/components/db/src/: constants.rs  lib.rs
news_service/components/db/src/models/: mod.rs  news_cron_job.rs  news_feed_url.rs  news_feed_url_reference.rs  news_referenced_tweet.rs  news_referenced_tweet_url.rs  news_tweet.rs  news_tweet_url.rs  news_tweet_url_image.rs  news_twitter_list.rs  news_twitter_referenced_user.rs  news_twitter_user.rs
news_service/components/db/src/queries/: mod.rs  news_feed_url_direct_references_query.rs  news_feed_url_indirect_references_query.rs  news_feed_url_query.rs  news_feed_url_references_query.rs  news_feed_url_shares_query.rs  news_referenced_url_query.rs  news_user_referenced_tweet_query.rs
news_service/components/db/src/sql/: mod.rs  news_cron_job.rs  news_direct_referenced_url_query.rs  news_feed_url.rs  news_feed_url_query.rs  news_feed_url_references_direct_query.rs  news_feed_url_references_indirect_query.rs  news_feed_url_references_query.rs  news_feed_url_shares_direct_query.rs  news_feed_url_shares_indirect_query.rs  news_indirect_referenced_url_query.rs  news_referenced_tweet.rs  news_referenced_tweet_url.rs  news_referenced_url_query.rs  news_tweet.rs  news_tweet_url.rs  news_twitter_list.rs  news_twitter_referenced_user.rs  news_twitter_user.rs  news_user_referenced_tweet_query.rs
news_service/components/db/src/util/: convert.rs  db.rs  mod.rs  string.rs  test.rs  time.rs
news_service/components/ml/: Cargo.toml  README.md  news_feed_urls.csv  news_feed_urls.jsonl  news_feed_urls_trained.jsonl
news_service/components/ml/src/: main.rs
news_service/queries/: direct_tweets.sql  indirect_tweets.sql  news_feed.sql  news_feed_url_shares.sql  news_feed_urls.sql  user_tweet_references.sql
oauth/: oauth2_token.sample.json
web/: .dockerignore  .prettierignore  Dockerfile  README.md  codegen.yml  next.config.js  package-lock.json  package.json
web/app/: log.ts  newsFeedUrlStore.ts  time.ts  util.ts
web/components/: DeleteMe.tsx  ExternalLink.tsx  Meta.tsx  SkipLink.tsx
web/components/feature/: about_content.tsx  jobs_content.tsx  news_content.tsx  news_feed_list.tsx  news_feed_url_content.tsx  news_feed_url_references.tsx  news_item_content.tsx  news_item_direct_references.tsx  (+2 more)
web/graphql/: client.ts
web/pages/: _app.tsx  about.tsx  index.tsx  jobs.tsx  layout.tsx  news.tsx  sitemapindex.xml.ts
web/public/: site.webmanifest
(+18 files in other folders)
