[package]
name = "ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }

# Runtime
tokio = {version = "1.15.0", features = ["full"]}

csv = "1.1.6"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.64" }

# # Runtime - same version as OpenAI API
# tokio = { version = "^0.2.5", features = ["full"]}
 
# OpenAI API
openai-api = "0.1.4"
